--- a/LayoutTests/inspector/timeline/timeline-frame-model.html
+++ b/LayoutTests/inspector/timeline/timeline-frame-model.html
@@ -159,8 +159,19 @@ function test()
                 {"startTime":1065.002, "endTime":1068.000, "type":"Layout", "data":{}},
                 {"startTime":1068.001, "endTime":1070.999, "type":"CompositeLayers", "data":{}},
             ]},
-            {"startTime":1072.000, "type":"BeginFrame", "thread": "implSide"},
-            {"startTime": 1073.000, "data":{},"endTime":1073.999, "type":"Program", "children":[
+            {"startTime":1080.000, "type":"BeginFrame", "thread": "implSide"},
+            {"startTime":1080.001, "type":"RequestMainThreadFrame", "thread": "implSide"},
+            {"startTime":1081.001, "type":"ActivateLayerTree", "thread": "implSide", "data":{"id": "3"}},
+            {"startTime":1081.002, "type":"DrawFrame", "thread": "implSide"},
+            {"startTime": 1073.000, "data":{},"endTime":1080.999, "type":"Program", "children":[
+                {"startTime":1073.002, "endTime":1079.999, "type":"ScrollLayer", "data":{}},
+            ]},
+            {"startTime":1096.000, "type":"BeginFrame", "thread": "implSide"},
+            {"startTime":1096.001, "type":"ActivateLayerTree", "thread": "implSide", "data":{"id": "3"}},
+            {"startTime":1096.002, "type":"DrawFrame", "thread": "implSide"},
+            {"startTime": 1081.000, "data":{},"endTime":1081.999, "type":"Program", "children":[
+                {"startTime":1081.001, "type":"BeginFrame", "data":{"id":"3"}},
+                {"startTime":1081.001, "endTime":1081.999, "type":"CompositeLayers", "data":{}},
             ]}
         ],
         "record processing order": [
