Use backend DOM node ids in Layers panel
- emit backend node ids as part of Layer information, so it does not require pushing nodes synchronously to the front-end;
- DOMAgent.pushNodeByBackendIdToFrontend -> DOMAgent.pushNodesByBackendIdsToFrontend(), as it now works on batches of node ids.

BUG=
R=pfeldman@chromium.org

Review URL: https://codereview.chromium.org/195273002

git-svn-id: svn://svn.chromium.org/blink/trunk@169105 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector-protocol/layers/get-layers.html
+++ b/LayoutTests/inspector-protocol/layers/get-layers.html
@@ -35,8 +35,13 @@ function test()
         var mutations = layerMutations(initialLayers, modifiedLayers);
         var newLayer = mutations.additions[0];
 
-        InspectorTest.sendCommand("DOM.getAttributes", {"nodeId": newLayer.nodeId}, InspectorTest.wrapCallback(gotNodeAttributes));
+        InspectorTest.sendCommand("DOM.pushNodesByBackendIdsToFrontend", {"backendNodeIds": [newLayer.backendNodeId]}, InspectorTest.wrapCallback(gotNodeId));
     };
+
+    function gotNodeId(result)
+    {
+        InspectorTest.sendCommand("DOM.getAttributes", {"nodeId": result.nodeIds[0]}, InspectorTest.wrapCallback(gotNodeAttributes));
+    }
 
     function gotNodeAttributes(result)
     {
@@ -81,11 +86,11 @@ function test()
     function dumpLayers(layers)
     {
         // Keep "internal" layers out for better stability.
-        layers = layers.filter(function(layer) { return !!layer.nodeId; });
+        layers = layers.filter(function(layer) { return !!layer.backendNodeId; });
         function replacer(key, value)
         {
 
-            if (["layerId", "parentLayerId", "nodeId", "paintCount"].indexOf(key) >= 0)
+            if (["layerId", "parentLayerId", "backendNodeId", "paintCount"].indexOf(key) >= 0)
                 return typeof(value);
 
             // some values differ based on port, but the ones we most
