Renamed /shadow-all/ to /shadow/.
Reflecting shadow styling spec, 5 March 2014: ^ should be /shadow/.
c.f. http://dev.w3.org/csswg/shadow-styling/#shadow-combinator

BUG=348891
TEST=replaced all /shadow-all/ in existing layout tests with /shadow/.

Review URL: https://codereview.chromium.org/183853035

git-svn-id: svn://svn.chromium.org/blink/trunk@169114 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/dom/shadow/style-with-cat.html
+++ b/LayoutTests/fast/dom/shadow/style-with-cat.html
@@ -225,13 +225,13 @@ borderColorShouldBe('host/host2/target', 'rgb(0, 0, 0)');
 
 cleanUp();
 
-// :host /shadow-all/ :host /shadow-deep/ div should not match.
+// :host /shadow/ :host /shadow-deep/ div should not match.
 
 sandbox.appendChild(
     createDOM('div', {'id': 'host'},
         createShadowRoot(
             createDOM('style', {},
-                document.createTextNode(':host /shadow-all/ :host /shadow-deep/ div { border: 1px solid green; }')),
+                document.createTextNode(':host /shadow/ :host /shadow-deep/ div { border: 1px solid green; }')),
             createDOM('div', {'id': 'host2'},
                 createShadowRoot(
                     createDOM('div', {'id': 'host3'},
