--- a/LayoutTests/fast/dom/shadow/content-combinator-with-shadow.html
+++ b/LayoutTests/fast/dom/shadow/content-combinator-with-shadow.html
@@ -9,7 +9,7 @@
   <pre id="console"></pre>
 </body>
 <script>
-description("Test for /content/ with /shadow-all/ and :host.");
+description("Test for /content/ with /shadow/ and :host.");
 
 var sandbox = document.getElementById('sandbox');
 
@@ -28,7 +28,7 @@ sandbox.appendChild(
         createShadowRoot(
             createDOM('style', {},
                 document.createTextNode(
-                    ':host(#host1) /shadow-all/ #content1 /content/ .content { color: green; }')),
+                    ':host(#host1) /shadow/ #content1 /content/ .content { color: green; }')),
             createDOM('div', {},
                 createDOM('div', {'id': 'host2'},
                     createShadowRoot(
@@ -47,7 +47,7 @@ sandbox.appendChild(
         createShadowRoot(
             createDOM('style', {},
                 document.createTextNode(
-                    '#host2 /shadow-all/ #content2 /content/ #parentOfContent1 > #content1 /content/ .content { color: green; }')),
+                    '#host2 /shadow/ #content2 /content/ #parentOfContent1 > #content1 /content/ .content { color: green; }')),
             createDOM('div', {},
                 createDOM('div', {'id': 'host2'},
                     createShadowRoot(
@@ -66,7 +66,7 @@ sandbox.appendChild(
         createShadowRoot(
             createDOM('style', {},
                 document.createTextNode(
-                    ':host /shadow-all/ #content2 /content/ #shadow1 /content/ #content1 /content/ .content { color: red; }')),
+                    ':host /shadow/ #content2 /content/ #shadow1 /content/ #content1 /content/ .content { color: red; }')),
             createDOM('content', {'id': 'content1'})),
         createShadowRoot(
             createDOM('div', {},
@@ -87,7 +87,7 @@ sandbox.appendChild(
         createShadowRoot(
             createDOM('style', {},
                 document.createTextNode(
-                    ':host /shadow-all/ #content2 /content/ #parentOfContent1 > #content1 /content/ .content { color: red; }')),
+                    ':host /shadow/ #content2 /content/ #parentOfContent1 > #content1 /content/ .content { color: red; }')),
             createDOM('div', {},
                 createDOM('div', {'id': 'host2'},
                     createShadowRoot(
