DevTools: Make SourcesNavigator a standalone component in SourcesPanel.
Moved file creation/renaming logic to navigator.
Made navigator listen for workspace changes itself.
Simplified file selection in navigator handler in sources panel.
Drive-by: Revealing uiSourceCode in navigator is not done automatically anymore, it is added as a context menu action instead now.

R=pfeldman, lushnikov

Review URL: https://codereview.chromium.org/196573009

git-svn-id: svn://svn.chromium.org/blink/trunk@169129 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/sources/debugger/scripts-panel.html
+++ b/LayoutTests/inspector/sources/debugger/scripts-panel.html
@@ -68,15 +68,18 @@ function test()
             var panel = new WebInspector.SourcesPanel(workspace);
             panel.show(WebInspector.inspectorView.element);
 
-            addNetworkFile(workspace, "foo.js");
+            var uiSourceCode = addNetworkFile(workspace, "foo.js");
             addNetworkFile(workspace, "bar.js");
             addNetworkFile(workspace, "baz.js");
 
             InspectorTest.dumpScriptsNavigator(panel._navigator);
+            InspectorTest.addResult("Revealing in navigator.");
+            panel._navigator.revealUISourceCode(uiSourceCode);
+            InspectorTest.dumpScriptsNavigator(panel._navigator);
 
             InspectorTest.testNetworkWorkspaceProvider.reset();
             InspectorTest.dumpScriptsNavigator(panel._navigator);
-            var uiSourceCode = addNetworkFile(workspace, "bar.js");
+            uiSourceCode = addNetworkFile(workspace, "bar.js");
             panel._navigator.revealUISourceCode(uiSourceCode);
             InspectorTest.dumpScriptsNavigator(panel._navigator);
 
