--- a/LayoutTests/inspector/sources/debugger/navigator-view.html
+++ b/LayoutTests/inspector/sources/debugger/navigator-view.html
@@ -88,7 +88,7 @@ function test()
 
     InspectorTest.addResult("Removing all resources:");
     for (var i = 0; i < uiSourceCodes.length; ++i)
-        navigator.removeUISourceCode(uiSourceCodes[i]);
+        navigator._removeUISourceCode(uiSourceCodes[i]);
     dumpNavigator();
 
     InspectorTest.completeTest();
