--- a/LayoutTests/fast/html/imports/resources/hello-css.html
+++ b/LayoutTests/fast/html/imports/resources/hello-css.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="import" href="hello.css">
+  <link rel="stylesheet" href="hello.css">
 </head>
 </html>
