Move timeline and trace viewer events for text autosizing.
We no longer create these events when the text autosizer's maximum
multiplier check causes an early exit from processSubtree.

BUG=

Review URL: https://codereview.chromium.org/195273003

git-svn-id: svn://svn.chromium.org/blink/trunk@169189 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/timeline/timeline-layout-autosize.html
+++ b/LayoutTests/inspector/timeline/timeline-layout-autosize.html
@@ -10,8 +10,10 @@
 }
 </style>
 <script>
-if (window.internals)
+if (window.internals) {
     window.internals.settings.setTextAutosizingEnabled(true);
+    window.internals.settings.setTextAutosizingWindowSizeOverride(320, 480);
+}
 
 function performActions()
 {
