--- a/LayoutTests/fast/forms/select/menulist-oninput-fired.html
+++ b/LayoutTests/fast/forms/select/menulist-oninput-fired.html
@@ -3,53 +3,27 @@
 <head>
 <meta charset="utf-8">
 <script src="../../../resources/js-test.js"></script>
-<script>
-window.jsTestIsAsync = true;
-
-var finishTest = false;
-
-function selectInputDispatched() {
-    debug("PASS");
-    if (finishTest)
-        finishJSTest();
-}
-
-function test() {
-    document.getElementById("bug-test").focus();
-    if (window.eventSender) {
-        debug("Pressing 2 key");
-        eventSender.keyDown('2');
-
-        debug("Pressing up 4 key");
-        eventSender.keyDown('4');
-
-        debug("Pressing 1 key");
-        eventSender.keyDown('1');
-
-        debug("Pressing 5 key");
-        eventSender.keyDown('5');
-
-        finishTest = true;
-    } else {
-        debug("Test manually by pressing option key. Should get PASS message");
-        finishJSTest();
-    }
-}
-
-successfullyParsed = true;
-</script>
 </head>
-<body onload="test()">
+<body>
 <p>Selecting menu list options should fire oninput event</p>
 
-<select id="bug-test" onInput="selectInputDispatched()">
+<select id="bug-test" onInput="debug('PASS')">
   <option>1</option>
   <option>2</option>
   <option>3</option>
   <option>4</option>
   <option>5</option>
 </select>
-
 <div id="console"></div>
+<script>
+    document.getElementById("bug-test").focus();
+    if (window.eventSender) {
+
+        debug("Pressing 2 key");
+        eventSender.keyDown('2');
+    } else {
+        debug("Test manually by pressing option key. Should get PASS message");
+    }
+</script>
 </body>
 </html>
