DevTools: Move WebInspector.inspectedPage{URL,Domain} into ResourceTreeModel
R=eustas, pfeldman, vsevik
NOTRY=true

Review URL: https://codereview.chromium.org/196573010

git-svn-id: svn://svn.chromium.org/blink/trunk@169223 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/inspector/search/sources-search-scope-in-files.html
+++ b/LayoutTests/http/tests/inspector/search/sources-search-scope-in-files.html
@@ -17,7 +17,7 @@ function test()
 
     function loadResource(name)
     {
-        var urlPrefix = WebInspector.inspectedPageURL.substr(0, WebInspector.inspectedPageURL.lastIndexOf("/") + 1);
+        var urlPrefix = WebInspector.resourceTreeModel.inspectedPageURL().substr(0, WebInspector.resourceTreeModel.inspectedPageURL().lastIndexOf("/") + 1);
         var url = urlPrefix + "resources/" + name;
         var xhr = new XMLHttpRequest();
         xhr.open("GET", url, false);
