--- a/LayoutTests/inspector/sources/debugger/watch-expressions-panel-switch.html
+++ b/LayoutTests/inspector/sources/debugger/watch-expressions-panel-switch.html
@@ -32,7 +32,7 @@ var test = function()
         watchExpressionsSection.watchExpressions.push("windowa.document");
         watchExpressionsSection.update();
 
-        var testName = WebInspector.inspectedPageURL;
+        var testName = WebInspector.resourceTreeModel.inspectedPageURL();
         testName = testName.substring(testName.lastIndexOf('/') + 1);
         InspectorTest.showScriptSource(testName, didShowScriptSource);
     }
