DevTools: show layer snapshots captured with Timeline
BUG=

Review URL: https://codereview.chromium.org/195873010

git-svn-id: svn://svn.chromium.org/blink/trunk@169236 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/layers/layer-compositing-reasons.html
+++ b/LayoutTests/inspector/layers/layer-compositing-reasons.html
@@ -45,7 +45,7 @@ function test()
 
     function onGotLayers()
     {
-        dumpCompositingReasons(InspectorTest._layerTreeModel.contentRoot());
+        dumpCompositingReasons(InspectorTest.layerTreeModel.contentRoot());
         for (var i = 0; i < idsToTest.length - 1; ++i)
             dumpCompositingReasons(InspectorTest.findLayerByNodeIdAttribute(idsToTest[i]));
         dumpCompositingReasons(InspectorTest.findLayerByNodeIdAttribute(idsToTest[idsToTest.length - 1]), InspectorTest.completeTest.bind(InspectorTest));
