DevTools: Move worker and device-inspection detection methods off the WebInspector ns.
R=eustas, pfeldman, vsevik

Review URL: https://codereview.chromium.org/196343013

git-svn-id: svn://svn.chromium.org/blink/trunk@169245 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/sources/debugger/file-system-project-mapping.html
+++ b/LayoutTests/inspector/sources/debugger/file-system-project-mapping.html
@@ -63,7 +63,7 @@ function test()
             dumpFileSystemUISourceCodesMappings();
             var uiSourceCode = InspectorTest.testWorkspace.uiSourceCode(fileSystemProjectId, "html/foo.js");
             var networkUISourceCode = InspectorTest.testWorkspace.uiSourceCode("http://localhost", "html/foo.js");
-            InspectorTest.override(WebInspector, "suggestReload", function() { });
+            InspectorTest.override(WebInspector.SourcesPanel.prototype, "_suggestReload", function() { });
             InspectorTest.addResult("Adding mapping between network and file system resources.");
             InspectorTest.testWorkspace.addMapping(networkUISourceCode, uiSourceCode, manager.fileSystemWorkspaceProvider);
             var setting = InspectorTest.testFileSystemMapping._fileSystemMappingSetting;
@@ -75,7 +75,6 @@ function test()
             manager.addMockFileSystem(fileSystemPath, true);
             manager.addFiles(fileSystemPath, files);
             dumpFileSystemUISourceCodesMappings();
-            InspectorTest.override(WebInspector, "suggestReload", function() { });
             InspectorTest.addResult("Removing mapping between network and file system resources.");
             uiSourceCode = InspectorTest.testWorkspace.uiSourceCode(fileSystemProjectId, "html/foo.js");
             InspectorTest.testWorkspace.removeMapping(uiSourceCode);
