Not showing "Consider using 'dppx' units instead of 'dpi',..." warning if dppx units are used.
Assume if the dppx unit is used in MediaQuerySet the author is aware of it and warning isn't needed.

Only one warning is generated per MediaQuerySet.

BUG=336276

Review URL: https://codereview.chromium.org/196473005

git-svn-id: svn://svn.chromium.org/blink/trunk@169249 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/console/console-log-media-query-warning.html
+++ b/LayoutTests/inspector/console/console-log-media-query-warning.html
@@ -6,14 +6,14 @@
 @media
     only screen and (                min-resolution: 192dpi),
     only screen and (                min-resolution: 2dppx) { 
-      /* No warning because dpi value is overriden by dppx once */
+      /* No warning because dppx value used */
   }
 </style>
 <style>
 @media
     only screen and (                min-resolution: 2dppx)
     only screen and (                min-resolution: 192dpi) {
-      /* Warning */
+      /* No warning because dppx value used */
   }
 </style>
 <style>
