Remove display() call from squashing LayoutTest
This test was calling display, as the animated gif would only invalidate
during paint calls.  This is a bit dodgy, as it relies on timing of the
gif and can't work unless an actual paint() occurs.

The test is trying to make sure that a non-CLM-owning layer inside of a
squashed layer only invalidates that layer and not more.  Therefore, a
change like updating the background color should be sufficient to verify
the same code.

BUG=345027

Review URL: https://codereview.chromium.org/199633002

git-svn-id: svn://svn.chromium.org/blink/trunk@169251 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/compositing/squashing/squash-partial-repaint-inside-squashed-layer.html
+++ b/LayoutTests/compositing/squashing/squash-partial-repaint-inside-squashed-layer.html
@@ -26,12 +26,14 @@
   background-color: lime;
 }
 
-.animatedGif {
+.repaintdiv {
   position: absolute;
   z-index: 1;
   top: 260px;
   left: 260px;
-  background-color: magenta;
+  width: 182px;
+  height: 29px;
+  background-color:red;
 }
 
 .top {
@@ -48,51 +50,33 @@ div:hover {
 }
 
 </style>
-
 <script>
     if (window.internals)
         internals.settings.setLayerSquashingEnabled(true);
-    if (window.testRunner) {
-        testRunner.waitUntilDone();
+    if (window.testRunner)
         testRunner.dumpAsText();
-    }
-    
-    function runTest()
-    {
-        document.getElementById("animatedGif").src = "animated.gif";
-    }
 
-    function imageLoaded()
+    function runTest()
     {
         if (!window.internals)
             return;
-        testRunner.display();
+        document.body.offsetTop;
         window.internals.startTrackingRepaints(document);
-        setTimeout(checkRepaint, 1500);
-    }
-
-    function checkRepaint()
-    {
-        // Case 2
-        testRunner.display();
-
-        document.getElementById('Case1').textContent = window.internals.layerTreeAsText(document, internals.LAYER_TREE_INCLUDES_REPAINT_RECTS);
+        document.getElementById('repaintdiv').style.background = 'salmon';
+        document.getElementById('testResults').textContent = window.internals.layerTreeAsText(document, internals.LAYER_TREE_INCLUDES_REPAINT_RECTS);
         window.internals.stopTrackingRepaints(document);
 
         // Display the test results only after test is done so that it does not affect repaint rect results.
         document.getElementById('testResults').style.display = "block";
-        testRunner.notifyDone();
     }
 </script>
 </head>
 <body onload="runTest()">
     <div class="composited box behind"></div>
     <div class="box middle"></div>
-    <img id="animatedGif" class="animatedGif" onload="imageLoaded()"></img>
+    <img id="repaintdiv" class="repaintdiv"></img>
     <div class="box top"></div>
 
-    <div id="testResults" style="display:none">
-        Repaint rect of the animated gif:
-        <pre id="Case1"></pre>
+    <pre id="testResults" style="display:none">
     </div>
 </body>
