DevTools: Extract the WebInspector namespace into WebInspector.js
The trivial code with no dependencies goes into WebInspector.js, too.
The externs.js file has been cleaned up accordingly.

R=pfeldman, vsevik

Review URL: https://codereview.chromium.org/187573004

git-svn-id: svn://svn.chromium.org/blink/trunk@169265 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/inspector/command-line-api-inspect.html
+++ b/LayoutTests/http/tests/inspector/command-line-api-inspect.html
@@ -11,7 +11,7 @@ function onload()
 
 function test()
 {
-    InspectorTest.addSniffer(WebInspector, "inspect", sniffInspect, true);
+    InspectorTest.addSniffer(WebInspector.Main.prototype, "inspect", sniffInspect, true);
 
     function sniffInspect(objectId, hints)
     {
