--- a/LayoutTests/inspector/sources/debugger/debugger-command-line-api.html
+++ b/LayoutTests/inspector/sources/debugger/debugger-command-line-api.html
@@ -11,7 +11,7 @@ function testFunction()
 
 var test = function()
 {
-    InspectorTest.addSniffer(WebInspector, "inspect", inspect);
+    InspectorTest.addSniffer(WebInspector.Main.prototype, "inspect", inspect);
     InspectorTest.addSniffer(WebInspector.Revealer, "reveal", updateFocusedNode);
 
     function updateFocusedNode(node)
