Add back window.showModalDialog
This is a revert of r167736 plus
changes to make it compile after the
Frame -> LocalFrame rename.

We are temporarily adding back window.showModalDialog
for M35, but plan to attempt removal again in M36.

BUG=345831

Review URL: https://codereview.chromium.org/200713002

git-svn-id: svn://svn.chromium.org/blink/trunk@169277 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/security/cross-frame-access-get.html
+++ b/LayoutTests/http/tests/security/cross-frame-access-get.html
@@ -130,6 +130,7 @@
             "scrollTo", 
             "setInterval", 
             "setTimeout", 
+            "showModalDialog",
             "stop"
         ];
 
