--- a/LayoutTests/http/tests/security/cross-frame-access-getOwnPropertyDescriptor.html
+++ b/LayoutTests/http/tests/security/cross-frame-access-getOwnPropertyDescriptor.html
@@ -129,6 +129,7 @@
             "scrollTo", 
             "setInterval", 
             "setTimeout", 
+            "showModalDialog", 
             "stop",
             "blur",
             "close",
