--- a/LayoutTests/http/tests/security/cross-frame-access-put.html
+++ b/LayoutTests/http/tests/security/cross-frame-access-put.html
@@ -223,6 +223,7 @@ window.onload = function()
     setForbiddenProperty(targetWindow, "scrollTo");
     setForbiddenProperty(targetWindow, "setInterval");
     setForbiddenProperty(targetWindow, "setTimeout");
+    setForbiddenProperty(targetWindow, "showModalDialog");
     setForbiddenProperty(targetWindow, "stop");
 
     setTimeout(function() {
