--- a/LayoutTests/http/tests/security/resources/cross-frame-iframe-for-put-test.html
+++ b/LayoutTests/http/tests/security/resources/cross-frame-iframe-for-put-test.html
@@ -256,6 +256,7 @@
         var scrollToOld = window.scrollTo;
         var setIntervalOld = window.setInterval;
         var setTimeoutOld = window.setTimeout;
+        var showModalDialogOld = window.showModalDialog;
         var stopOld = window.stop;
 
         setTimeout(function() {
@@ -469,6 +470,9 @@
             shouldBe("window.scrollTo", "scrollToOld");
             shouldBe("window.setInterval", "setIntervalOld");
             shouldBe("window.setTimeout", "setTimeoutOld");
+
+            // showModalDialog is not implemented on all platforms for DumpRenderTree.  So don't display the values.
+            shouldBe("window.showModalDialog", "showModalDialogOld", true);
             shouldBe("window.stop", "stopOld");
         }, 0);
     </script>
