--- a/ManualTests/js-timers-beneath-modal-dialog.html
+++ b/ManualTests/js-timers-beneath-modal-dialog.html
@@ -1,4 +1,5 @@
-<p>JS timers should be paused while an alert is displayed.</p>
+<p>JS timers should be paused while a modal dialog (or alert) is displayed.</p>
+<p>Please disable popup blocker for this test.</p>
 <div>0</div>
 <script>
 function f()
@@ -10,6 +11,7 @@ function f()
 var timerId = setInterval(f, 100);
 
 alert("Numbers in main window should not increase while this alert is displayed");
+showModalDialog("data:text/html,<p>Numbers in main window should not increase while this modal dialog is displayed</p>");
 document.getElementsByTagName("div")[0].innerHTML = "DONE";
 
 clearInterval(timerId);
