Make supported-xml-content-types.html tests faster.
To try to address Windows test slowness, switch this test over to
async XHR requests + split it up into chunks.

R=mkwst@chromium.org
BUG=

Review URL: https://codereview.chromium.org/198893002

git-svn-id: svn://svn.chromium.org/blink/trunk@169317 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/xmlhttprequest/supported-xml-content-types-invalid-2.html
+++ b/LayoutTests/http/tests/xmlhttprequest/supported-xml-content-types-invalid-2.html
@@ -7,19 +7,14 @@ window.jsTestIsAsync = true;
 if (window.testRunner)
     testRunner.dumpAsText();
 
-// valid types
-testXMLType("text/xml", true);
-testXMLType("image/svg+xml", true);
-testXMLType("application/soap+xml", true);
-testXMLType("foo/bar+xml", true);
-testXMLType("123/BAR+xml", true);
-
-// non-xml types
-testXMLType("text/html", false);
-testXMLType("image/png", false);
-
-// invalid types
-testXMLType("invalid", false);
+testXMLType("foo,bar/baz+xml", false);
+testXMLType("foo;bar/baz+xml", false);
+testXMLType("foo:bar/baz+xml", false);
+testXMLType("foo\\bar/baz+xml", false);
+testXMLType('foo"bar/baz+xml', false);
+testXMLType("foo/bar/baz+xml", false);
+testXMLType("foo?bar/baz+xml", false);
+testXMLType("foo=bar/baz+xml", false);
 
 runNextTest();
 </script>
