Web Animations API: Update element.animate and Player to reflect latest spec
Rename Player to AnimationPlayer
(http://lists.w3.org/Archives/Public/public-fx/2014JanMar/0083.html).
Convert element.animate to return an AnimationPlayer rather than an Animation
(http://lists.w3.org/Archives/Public/public-fx/2014JanMar/0099.html).

BUG=334926,327564

Review URL: https://codereview.chromium.org/196483004

git-svn-id: svn://svn.chromium.org/blink/trunk@169326 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/web-animations-api/timed-item.html
+++ b/LayoutTests/web-animations-api/timed-item.html
@@ -17,7 +17,7 @@ test(function() {
 }, 'TimedItem.localTime and TimedItem.currentIteration are null when animation is not associated with a Player');
 
 test(function() {
-    var animation = element.animate(keyframes, {fill: 'both', duration: 2, iterations: 3});
+    var animation = element.animate(keyframes, {fill: 'both', duration: 2, iterations: 3}).source;
     animation.player.currentTime = -1;
     assert_equals(animation.localTime, -1);
     assert_equals(animation.currentIteration, 0);
@@ -33,7 +33,7 @@ test(function() {
 }, 'TimedItem.localTime and TimedItem.currentIteration return reasonable values when an animation is in effect');
 
 test(function() {
-    var animation = element.animate(keyframes);
+    var animation = element.animate(keyframes).source;
     animation.player.currentTime = -1;
     assert_equals(animation.currentIteration, null);
     animation.player.currentTime = 1;
