--- a/LayoutTests/web-animations-api/element-animate-list-of-keyframes.html
+++ b/LayoutTests/web-animations-api/element-animate-list-of-keyframes.html
@@ -33,7 +33,7 @@ test(function() {
     var player = e1.animate([
         {left: '10px', opacity: '1', offset: 0},
         {left: '100px', opacity: '0', offset: 1}
-    ], durationValue).player;
+    ], durationValue);
     player.pause();
     player.currentTime = durationValue / 2;
     assert_equals(e1Style.left, '55px');
@@ -44,7 +44,7 @@ test(function() {
     var player = e2.animate([
         {backgroundColor: 'green', offset: 0},
         {backgroundColor: 'purple', offset: 1}
-    ], durationValue).player;
+    ], durationValue);
     player.pause();
     player.currentTime = durationValue / 2;
     assert_equals(e2Style.backgroundColor, 'rgb(64, 64, 64)');
@@ -57,7 +57,7 @@ var keyframesWithInvalid = [
         ];
 
 test(function() {
-    var player = e3.animate(keyframesWithInvalid, {duration: durationValue, fill: 'forwards'}).player;
+    var player = e3.animate(keyframesWithInvalid, {duration: durationValue, fill: 'forwards'});
     player.pause();
     player.currentTime = durationValue;
     assert_equals(e3Style.width, '1000px');
