--- a/LayoutTests/web-animations-api/player.html
+++ b/LayoutTests/web-animations-api/player.html
@@ -7,9 +7,9 @@
 <script>
 var element = document.getElementById('element');
 test(function() {
-    var animation = element.animate([{left: '0px', offset: 0}, {left: '100px', offset: 1}], 10);
-    var player = animation.player;
-    assert_equals(player.source, animation);
+    var player = element.animate([{left: '0px', offset: 0}, {left: '100px', offset: 1}], 10);
+    var animation = player.source;
+    assert_equals(animation.player, player);
     assert_equals(player.currentTime, 0);
     player.currentTime = 5;
     assert_equals(player.currentTime, 5);
@@ -38,7 +38,7 @@ test(function() {
 }, 'Player sanity tests');
 
 test(function() {
-    var player = element.animate([{left: '0px', offset: 0}, {left: '100px', offset: 1}], {iterations: Infinity, duration: 10}).player;
+    var player = element.animate([{left: '0px', offset: 0}, {left: '100px', offset: 1}], {iterations: Infinity, duration: 10});
     assert_throws('INVALID_STATE_ERR', function() { player.finish(); });
 }, 'Player.finish() raises exception if source content end is infinity');
 </script>
